# PlotPilot

./: .gitattributes  =++Contribution Value Roster++=  README.md  README_LOGGING.md  requirements-local.txt  requirements-nsis.txt  requirements.txt  一键启动.bat  停止服务.bat
application/ai/: embedding_config_service.py  llm_control_service.py  llm_output_sanitize.py  structured_json_pipeline.py
application/analyst/services/: chapter_indexing_service.py  state_updater.py  tension_analyzer.py
application/analyst/tension/: __init__.py  schema.py
application/blueprint/services/: continuous_planning_service.py
application/core/services/: chapter_service.py
application/engine/services/: autopilot_daemon.py  context_budget_allocator.py  context_builder.py
application/novel/chapter_renumber/: __init__.py  coordinator.py
application/services/: ai_generation_service.py
application/workbench/dtos/: writer_block_dto.py
application/workflows/: __init__.py  auto_novel_generation_workflow.py  beat_continuation.py
application/world/: bible_generation_state.py
application/world/services/: auto_bible_generator.py  chapter_narrative_sync.py
docs/pr/: pr-beat-narrative-enhancement.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
infrastructure/ai/: chromadb_vector_store.py  local_embedding_service.py  openai_embedding_service.py  prompt_loader.py  prompt_manager.py
interfaces/: main.py
interfaces/api/: dependencies.py
scripts/: start_daemon.py
(+68 files in other folders)
